--- a/scss/_full.scss
+++ b/scss/_full.scss
@@ -809,7 +809,7 @@ h1{
             // transform: translate(0, -50%);
             left: 0;
             width: 100%;
-            height: calc(100% + 200px);
+            height:100vh;
         }
         .slick-slider .slick-track, .slick-slider .slick-list{
             height: 100% !important;
@@ -851,13 +851,27 @@ h1{
             display: flex;
             flex-direction: column;
         }
+        
+        .mobile{
+            display: none;
+            @media(max-width:767px){
+                display: block;
+            }
+        }
+        .pc{
+            display: block;
+            @media(max-width:767px){
+                display: none;
+            }
+        }
+
         .map{
             z-index: 1;
             position: absolute;
-            left: 0;
-            top: 5%;
-            width: 100%;
-            height: 100%;
+            left: 20px;
+            top: 20px;
+            width: calc(100% - 40px);
+            height: calc(100% - 40px);
             @media(max-width:767px){
                 position: relative;
                 height: 58.90052vw;
@@ -890,7 +904,7 @@ h1{
                 align-items: center;
                 justify-content: center;
                 text-align: center;
-                background-color: #51c1cc;
+                background-color: rgb(223, 203, 147);
                 border: 1px solid #fff;
                 border-radius: 50%;
                 color: #fff;
@@ -902,7 +916,7 @@ h1{
                 align-items: center;
                 justify-content: center;
                 text-align: center;
-                background-color: #51c1cc;
+                background-color: rgb(223, 203, 147);
                 border: 1px solid #fff;
                 border-radius: 50%;
                 color: #fff;
@@ -994,6 +1008,9 @@ h1{
             @media(max-width:767px){
                 max-width: 80%;
                 margin: 0 auto;
+            }
+            @media(max-width:767px){
+                max-width: 93%;
             }
             li{
                 display: flex;
