--- a/css/main.css
+++ b/css/main.css
@@ -731,7 +731,7 @@ h1 {
         background-color: #fff; }
     .section_02_video .content {
       height: 100%; }
-    .section_02_video iframe {
+    .section_02_video iframe, .section_02_video video, .section_02_video embed {
       display: block;
       z-index: 1;
       left: 0;
@@ -779,7 +779,8 @@ h1 {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
         -ms-flex-direction: column;
-        flex-direction: column; } }
+        flex-direction: column;
+        padding-bottom: 70px; } }
     .section_03 .mobile {
       display: none; }
       @media (max-width: 767px) {
@@ -807,58 +808,46 @@ h1 {
           -ms-flex-order: 2;
           order: 2; } }
     .section_03 .zoomInOut {
-      left: 16vw;
-      top: 3vw;
+      left: 24vw;
+      bottom: 2vw;
       position: absolute;
       display: -webkit-box;
       display: -ms-flexbox;
       display: flex;
       z-index: 3; }
+      @media (max-width: 767px) {
+        .section_03 .zoomInOut {
+          position: absolute;
+          bottom: 15px;
+          top: auto;
+          left: 50%;
+          -webkit-transform: translateX(-50%);
+          -ms-transform: translateX(-50%);
+          transform: translateX(-50%); } }
       .section_03 .zoomInOut > div {
-        width: 3.385vw;
-        height: 3.385vw;
-        line-height: 3.385vw;
-        font-size: 3vw; }
+        font-size: 0;
+        width: 7.292vw;
+        height: 3.438vw;
+        cursor: pointer;
+        margin: 0 5px; }
         @media (max-width: 767px) {
           .section_03 .zoomInOut > div {
-            width: 40px;
-            height: 40px;
-            line-height: 40px;
-            font-size: 20px; } }
+            width: 85px;
+            height: 40px; } }
       .section_03 .zoomInOut .plus {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-        text-align: center;
-        background-color: #dfcb93;
-        border: 1px solid #fff;
-        border-radius: 50%;
-        color: #fff;
-        cursor: pointer;
-        margin: 0 5px; }
+        background-image: url(../assets/images/plus.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain; }
+        .section_03 .zoomInOut .plus:hover {
+          background-image: url(../assets/images/plus_hover.png); }
       .section_03 .zoomInOut .minus {
-        display: -webkit-box;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-align: center;
-        -ms-flex-align: center;
-        align-items: center;
-        -webkit-box-pack: center;
-        -ms-flex-pack: center;
-        justify-content: center;
-        text-align: center;
-        background-color: #dfcb93;
-        border: 1px solid #fff;
-        border-radius: 50%;
-        color: #fff;
-        cursor: pointer;
-        margin: 0 5px; }
+        background-image: url(../assets/images/minus.png);
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: contain; }
+        .section_03 .zoomInOut .minus:hover {
+          background-image: url(../assets/images/minus_hover.png); }
     .section_03 .content {
       z-index: 4;
       margin-left: auto;
