--- a/scss/_full.scss
+++ b/scss/_full.scss
@@ -801,7 +801,7 @@ h1{
         .content{
             height: 100%;
         }
-        iframe {
+        iframe,video, embed {
             display: block;
             // position: absolute;
             z-index: 1;
@@ -850,6 +850,7 @@ h1{
         @media(max-width:767px){
             display: flex;
             flex-direction: column;
+            padding-bottom: 70px;
         }
         
         .mobile{
@@ -881,47 +882,55 @@ h1{
             }
         }
         .zoomInOut{
-            left: 16vw;
-            top: 3vw;
+            left: 24vw;
+            bottom: 2vw;
             position: absolute;
             display: flex;
             z-index: 3;
+            @media(max-width:767px){
+                position: absolute;
+                bottom: 15px;
+                top: auto;
+                left: 50%;
+                transform: translateX(-50%);
+            }
             > div{
-                width: 3.385vw;
-                height: 3.385vw;
-                line-height: 3.385vw;
-                font-size: 3vw;
+                // width: 3.385vw;
+                // height: 3.385vw;
+                // line-height: 3.385vw;
+                font-size: 0;
+
+                width:7.292vw;
+                height: 3.438vw;
+                cursor: pointer;
+                margin: 0 5px;
                 @media(max-width:767px){
-                    width: 40px;
+                    // width: 40px;
+                    // height: 40px;
+                    // line-height: 40px;
+                    // font-size: 20px;
+
+                    width: 85px;
                     height: 40px;
-                    line-height: 40px;
-                    font-size: 20px;
                 }
             }
             .plus{
-                
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                text-align: center;
-                background-color: rgb(223, 203, 147);
-                border: 1px solid #fff;
-                border-radius: 50%;
-                color: #fff;
-                cursor: pointer;
-                margin: 0 5px;
+                background-image: url(../assets/images/plus.png);
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: contain;
+                &:hover{
+                    background-image: url(../assets/images/plus_hover.png);
+                }
             }
             .minus{
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                text-align: center;
-                background-color: rgb(223, 203, 147);
-                border: 1px solid #fff;
-                border-radius: 50%;
-                color: #fff;
-                cursor: pointer;
-                margin: 0 5px;
+                background-image: url(../assets/images/minus.png);
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: contain;
+                &:hover{
+                    background-image: url(../assets/images/minus_hover.png);
+                }
             }
         }
 
