--- a/css/main.css
+++ b/css/main.css
@@ -1530,6 +1530,57 @@ h1 {
     .modal.modal-message .modal-body {
       font-size: 18px; } }
 
+.modal.modal-video {
+  padding-left: 0 !important; }
+  .modal.modal-video .modal-dialog {
+    max-width: 66.66%;
+    margin-top: 0;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
+    @media (max-width: 767px) {
+      .modal.modal-video .modal-dialog {
+        max-width: 87vw; } }
+  .modal.modal-video .yt-player {
+    height: 78.26vh; }
+    @media (max-width: 767px) {
+      .modal.modal-video .yt-player {
+        height: 50vh; } }
+    @media (max-width: 480px) {
+      .modal.modal-video .yt-player {
+        height: 30vh; } }
+  .modal.modal-video .close_video {
+    position: absolute;
+    right: -25px;
+    top: -20px;
+    max-width: 50px;
+    cursor: pointer;
+    -webkit-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+    transition: all 0.3s ease; }
+    .modal.modal-video .close_video img {
+      width: 100%; }
+    @media (max-width: 767px) {
+      .modal.modal-video .close_video {
+        max-width: 35px;
+        right: -14px;
+        top: -15px; } }
+    .modal.modal-video .close_video:hover {
+      -webkit-transform: rotate(360deg);
+      -ms-transform: rotate(360deg);
+      transform: rotate(360deg); }
+      @media (max-width: 767px) {
+        .modal.modal-video .close_video:hover {
+          -webkit-transform: none;
+          -ms-transform: none;
+          transform: none; } }
+
 .modal .close {
   height: 3.490vw;
   width: 3.490vw;
@@ -1621,9 +1672,56 @@ h1 {
       height: auto; } }
   .videoSlider .item {
     position: relative; }
+  .videoSlider .thumb {
+    background-size: cover;
+    background-position: center center;
+    height: 100vh;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center; }
     @media (max-width: 767px) {
-      .videoSlider .item {
-        height: 300px; } }
+      .videoSlider .thumb {
+        height: auto; } }
+  .videoSlider .mobile {
+    display: none; }
+    @media (max-width: 767px) {
+      .videoSlider .mobile {
+        display: block; } }
+  @media (max-width: 767px) {
+    .videoSlider .pc {
+      display: none; } }
+  .videoSlider .btn_play {
+    cursor: pointer;
+    max-width: 100px;
+    -webkit-transition: all 0.2s ease;
+    -o-transition: all 0.2s ease;
+    transition: all 0.2s ease; }
+    @media (max-width: 767px) {
+      .videoSlider .btn_play {
+        position: absolute;
+        left: 50%;
+        top: 50%;
+        -webkit-transform: translate(-50%, -50%);
+        -ms-transform: translate(-50%, -50%);
+        transform: translate(-50%, -50%);
+        max-width: 60px; } }
+    .videoSlider .btn_play:hover {
+      -ms-transform: scale(1.1);
+      transform: scale(1.1);
+      -moz-transform: scale(1.1);
+      -o-transform: scale(1.1);
+      -webkit-transform: scale(1.1); }
+      @media (max-width: 767px) {
+        .videoSlider .btn_play:hover {
+          -webkit-transform: translate(-50%, -50%);
+          -ms-transform: translate(-50%, -50%);
+          transform: translate(-50%, -50%); } }
   .videoSlider .yt-player {
     position: absolute;
     top: 0;
